<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SwitchOptionWidget</class>
 <widget class="QWidget" name="SwitchOptionWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>300</width>
    <height>635</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Nom : </string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="_objectNameEdit"/>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Etat initial : </string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="_initialStateCheckBox">
         <property name="text">
          <string>On</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QPushButton" name="_addConnexionButton">
       <property name="text">
        <string>Ajouter une connexion</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QTableWidget" name="_connexionTable">
       <property name="columnCount">
        <number>4</number>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>125</number>
       </attribute>
       <column>
        <property name="text">
         <string>Objet</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>Commande</string>
        </property>
       </column>
       <column/>
       <column/>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
